--- a/Tengu/Views/AnimeModelDialog.axaml
+++ b/Tengu/Views/AnimeModelDialog.axaml
@@ -20,58 +20,59 @@
 				<RowDefinition Height="Auto"/>
 				<RowDefinition/>
 			</Grid.RowDefinitions>
-		</Grid>
+
 		
-		<TextBlock Text="{Binding AnimeData.Title}" 
-				   FontSize="17"
-				   Margin="0,0,0,20"
-				   TextWrapping="Wrap"/>
+			<TextBlock Text="{Binding AnimeData.Title}" 
+					   FontSize="17"
+					   Margin="0,0,0,20"
+					   TextWrapping="Wrap"/>
 
-		<Grid Grid.Row="1">
-			<ScrollViewer IsVisible="{Binding !Loading}">
+			<Grid Grid.Row="1">
+				<ScrollViewer IsVisible="{Binding !Loading}">
 
-				<ItemsControl Items="{Binding EpisodesList}">
-					<ItemsControl.ItemsPanel>
-						<ItemsPanelTemplate>
-							<WrapPanel Orientation="Horizontal"
-									   HorizontalAlignment="Center"
+					<ItemsControl Items="{Binding EpisodesList}">
+						<ItemsControl.ItemsPanel>
+							<ItemsPanelTemplate>
+								<WrapPanel Orientation="Horizontal"
+										   HorizontalAlignment="Left"
+										   VerticalAlignment="Top"/>
+							</ItemsPanelTemplate>
+						</ItemsControl.ItemsPanel>
+
+						<ItemsControl.ItemTemplate>
+							<DataTemplate>
+								<styles:Card CornerRadius="24" 
+											 Padding="4" Margin="4" 
+											 HorizontalAlignment="Center"
+											 VerticalAlignment="Center">
+									<StackPanel Orientation="Horizontal">
+										<TextBlock Text="{Binding EpisodeNumber, StringFormat={}Episode {0}}"
+												   Margin="10,0" Width="80"
+												   VerticalAlignment="Center"/>
+										<styles:FloatingButton Classes="Mini">
+											<avalonia:MaterialIcon Kind="Download"/>
+										</styles:FloatingButton>
+									</StackPanel>
+								</styles:Card>
+							</DataTemplate>
+						</ItemsControl.ItemTemplate>
+					</ItemsControl>
+				</ScrollViewer>
+
+				<StackPanel VerticalAlignment="Center"
+								HorizontalAlignment="Center"
+								IsVisible="{Binding Loading}">
+					<styles:Card CornerRadius="24" Padding="4" Margin="4" HorizontalAlignment="Center"
+								 VerticalAlignment="Center">
+						<StackPanel Orientation="Horizontal">
+							<TextBlock Text="Loading Episodes"
+									   Margin="10,0"
 									   VerticalAlignment="Center"/>
-						</ItemsPanelTemplate>
-					</ItemsControl.ItemsPanel>
-
-					<ItemsControl.ItemTemplate>
-						<DataTemplate>
-							<styles:Card CornerRadius="24" 
-										 Padding="4" Margin="4" 
-										 HorizontalAlignment="Center"
-										 VerticalAlignment="Center">
-								<StackPanel Orientation="Horizontal">
-									<TextBlock Text="{Binding EpisodeNumber, StringFormat={}Episode {0}}"
-											   Margin="10,0"
-											   VerticalAlignment="Center"/>
-									<styles:FloatingButton Classes="Mini">
-										<avalonia:MaterialIcon Kind="Download"/>
-									</styles:FloatingButton>
-								</StackPanel>
-							</styles:Card>
-						</DataTemplate>
-					</ItemsControl.ItemTemplate>
-				</ItemsControl>
-			</ScrollViewer>
-
-			<StackPanel VerticalAlignment="Center"
-							HorizontalAlignment="Center"
-							IsVisible="{Binding Loading}">
-				<styles:Card CornerRadius="24" Padding="4" Margin="4" HorizontalAlignment="Center"
-							 VerticalAlignment="Center">
-					<StackPanel Orientation="Horizontal">
-						<TextBlock Text="Loading Episodes"
-								   Margin="10,0"
-								   VerticalAlignment="Center"/>
-						<ProgressBar Classes="Circle" IsIndeterminate="True" />
-					</StackPanel>
-				</styles:Card>
-			</StackPanel>
+							<ProgressBar Classes="Circle" IsIndeterminate="True" />
+						</StackPanel>
+					</styles:Card>
+				</StackPanel>
+			</Grid>
 		</Grid>
 	</Panel>
 
