--- a/Tengu/Views/HomePage.axaml
+++ b/Tengu/Views/HomePage.axaml
@@ -16,8 +16,10 @@
 			<StackPanel VerticalAlignment="Center">
 				<TextBlock Text="Tengu" 
 						   HorizontalAlignment="Center"
-						   FontSize="20"/>
-				<TextBlock Text="*Description*"
+						   FontSize="25"/>
+				<TextBlock Text="{Binding Description}"
+						   TextAlignment="Center"
+						   Margin="0,10,0,0"
 						   HorizontalAlignment="Center"
 						   TextWrapping="Wrap"/>
 			
