--- a/Tengu/Views/DownloadPage.axaml
+++ b/Tengu/Views/DownloadPage.axaml
@@ -22,7 +22,6 @@
 			<Grid Margin="5,0">
 				<Grid.RowDefinitions>
 					<RowDefinition Height="Auto"/>
-					<RowDefinition Height="Auto"/>
 					<RowDefinition />
 				</Grid.RowDefinitions>
 			
@@ -41,34 +40,14 @@
 								<TextBlock Text="AnimeSaturn Queue"
 										   FontSize="15"/>
 
-								<TextBlock Text="0 Download(s) in progress.."/>
+								<TextBlock Text="{Binding downloadManager.SaturnDownloadCount, StringFormat={}{0} Download(s) in progress..}"/>
 							</StackPanel>
 						</Grid>
 					</styles:Card>
 
-				<Grid Grid.Row="1"
-					  IsVisible="{Binding downloadManager.SaturnDownloading}"
-					  Margin="30,5">
-					<Border HorizontalAlignment="Stretch"
-							VerticalAlignment="Stretch"
-							Opacity=".4"
-							Background="{DynamicResource MaterialDesignBodyLight}">
-
-					</Border>
-
-					<StackPanel>
-						<StackPanel>
-							<TextBlock Text="{Binding downloadManager.SaturnDownloadingEpisode.Title}" Margin="10,5,10,0"/>
-							<TextBlock Text="{Binding downloadManager.SaturnDownloadingEpisode.EpisodeNumber, StringFormat={}Episode {0}}" Margin="10,0,10,5"/>
-						</StackPanel>
-
-						<ProgressBar Value="{Binding downloadManager.SaturnDownloadPercentage}" />
-					</StackPanel>
-				</Grid>
-
-				<ItemsControl Margin="30,0,30,5"
+				<ItemsControl Margin="30,5"
 							  Items="{Binding downloadManager.QueueAnimeSaturn}"
-							  Grid.Row="2">
+							  Grid.Row="1">
 					<ItemsControl.ItemsPanel>
 						<ItemsPanelTemplate>
 							<StackPanel Orientation="Vertical"
@@ -89,12 +68,19 @@
 								</Border>
 
 								<StackPanel>
-									<StackPanel>
-										<TextBlock Text="{Binding Title}" Margin="10,5,10,0"/>
-										<TextBlock Text="{Binding EpisodeNumber, StringFormat={}Episode {0}}" Margin="10,0,10,5"/>
-									</StackPanel>
+									<Grid>
+										<StackPanel>
+											<TextBlock Text="{Binding Episode.Title}" Margin="10,5,10,0"/>
+											<TextBlock Text="{Binding Episode.EpisodeNumber, StringFormat={}Episode {0}}" Margin="10,0,10,5"/>
+										</StackPanel>
 
-									<ProgressBar Value="0" />
+										<TextBlock Text="{Binding DownloadPercentage, StringFormat={}{0}%}" 
+												   HorizontalAlignment="Right"
+												   VerticalAlignment="Bottom"
+												   Margin="0,0,5,0"/>
+									</Grid>
+
+									<ProgressBar Value="{Binding DownloadPercentage}"/>
 								</StackPanel>
 							</Grid>
 						</DataTemplate>
@@ -123,32 +109,12 @@
 							<TextBlock Text="AnimeUnity Queue"
 									   FontSize="15"/>
 
-							<TextBlock Text="3 Download(s) in progress.."/>
+							<TextBlock Text="{Binding downloadManager.UnityDownloadCount, StringFormat={}{0} Download(s) in progress..}"/>
 						</StackPanel>
 					</Grid>
 				</styles:Card>
-
-				<Grid Grid.Row="1"
-					  IsVisible="{Binding downloadManager.UnityDownloading}"
-					  Margin="30,5">
-					<Border HorizontalAlignment="Stretch"
-							VerticalAlignment="Stretch"
-							Opacity=".4"
-							Background="{DynamicResource MaterialDesignBodyLight}">
-
-					</Border>
-
-					<StackPanel>
-						<StackPanel>
-							<TextBlock Text="{Binding downloadManager.UnityDownloadingEpisode.Title}" Margin="10,5,10,0"/>
-							<TextBlock Text="{Binding downloadManager.UnityDownloadingEpisode.EpisodeNumber, StringFormat={}Episode {0}}" Margin="10,0,10,5"/>
-						</StackPanel>
-
-						<ProgressBar Value="{Binding downloadManager.UnityDownloadPercentage}" />
-					</StackPanel>
-				</Grid>
-
-				<ItemsControl Margin="30,0,30,5"
+				
+				<ItemsControl Margin="30,5"
 							  Items="{Binding downloadManager.QueueAnimeUnity}"
 							  Grid.Row="2">
 					<ItemsControl.ItemsPanel>
@@ -171,12 +137,19 @@
 								</Border>
 
 								<StackPanel>
-									<StackPanel>
-										<TextBlock Text="{Binding Title}" Margin="10,5,10,0"/>
-										<TextBlock Text="{Binding EpisodeNumber, StringFormat={}Episode {0}}" Margin="10,0,10,5"/>
-									</StackPanel>
+									<Grid>
+										<StackPanel>
+											<TextBlock Text="{Binding Episode.Title}" Margin="10,5,10,0"/>
+											<TextBlock Text="{Binding Episode.EpisodeNumber, StringFormat={}Episode {0}}" Margin="10,0,10,5"/>
+										</StackPanel>
 
-									<ProgressBar Value="0" />
+										<TextBlock Text="{Binding DownloadPercentage, StringFormat={}{0}%}"
+												   HorizontalAlignment="Right"
+												   VerticalAlignment="Bottom"
+												   Margin="0,0,5,0"/>
+									</Grid>
+
+									<ProgressBar Value="{Binding DownloadPercentage}"/>
 								</StackPanel>
 							</Grid>
 						</DataTemplate>
