--- a/Tengu/Views/DownloadPage.axaml
+++ b/Tengu/Views/DownloadPage.axaml
@@ -90,7 +90,7 @@
 													Command="{Binding $parent[ItemsControl].DataContext.CancelDownloadCommand}"
 													CommandParameter="{Binding}"
 													Padding="0" Classes="Flat">
-												<avalonia:MaterialIcon Kind="Remove" />
+												<avalonia:MaterialIcon Kind="CloseThick" />
 											</Button>
 										</Grid>
 									</Grid>
@@ -174,7 +174,7 @@
 													Command="{Binding $parent[ItemsControl].DataContext.CancelDownloadCommand}"
 													CommandParameter="{Binding}"
 													Padding="0" Classes="Flat">
-												<avalonia:MaterialIcon Kind="Remove" />
+												<avalonia:MaterialIcon Kind="CloseThick" />
 											</Button>
 										</Grid>
 									</Grid>
