--- a/Tengu/Views/MainWindow.axaml
+++ b/Tengu/Views/MainWindow.axaml
@@ -77,6 +77,9 @@
 
 				<!-- Download page -->
 				<local:DownloadPage />
+
+				<!-- Settings page -->
+				<local:SettingsPage />
 			</Carousel>
 		</Border>
 
