--- a/Tengu/App.axaml
+++ b/Tengu/App.axaml
@@ -1,16 +1,9 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-			 xmlns:themes="clr-namespace:Material.Styles.Themes;assembly=Material.Styles"
              xmlns:local="using:Tengu"
              x:Class="Tengu.App">
-	<Application.Styles>
-		<StyleInclude Source="avares://Avalonia.Themes.Default/DefaultTheme.xaml"/>
 
-		<StyleInclude Source="avares://Material.Avalonia/Material.Avalonia.Templates.xaml" />
-		<StyleInclude Source="avares://Material.Icons.Avalonia/App.xaml" />
-		<StyleInclude Source="avares://Paginator.Avalonia/View/PaginatorControl.xaml" />
-
-		<themes:MaterialTheme BaseTheme="Dark" PrimaryColor="Indigo" SecondaryColor="Amber"/>
-	</Application.Styles>
-	
+    <Application.Styles>
+		<StyleInclude Source="avares://Tengu.Delicious/Sea.xaml"/>
+    </Application.Styles>
 </Application>
