--- a/Tengu.Delicious/Theme/Index.xaml
+++ b/Tengu.Delicious/Theme/Index.xaml
@@ -6,4 +6,5 @@
 	<StyleInclude Source="avares://Tengu.Delicious/Theme/BorderStyles.xaml"/>
 	<StyleInclude Source="avares://Tengu.Delicious/Theme/TextBlockStyles.xaml"/>
 	<StyleInclude Source="avares://Tengu.Delicious/Theme/TextBoxStyles.xaml"/>
+	<StyleInclude Source="avares://Tengu.Delicious/Theme/ToggleButtonStyles.xaml"/>
 </Styles>
