added tab control styles

--- a/Tengu.Delicious/Theme/Index.xaml
+++ b/Tengu.Delicious/Theme/Index.xaml
@@ -8,4 +8,5 @@
 	<StyleInclude Source="avares://Tengu.Delicious/Theme/TextBoxStyles.xaml"/>
 	<StyleInclude Source="avares://Tengu.Delicious/Theme/ToggleButtonStyles.xaml"/>
 	<StyleInclude Source="avares://Tengu.Delicious/Theme/CheckBoxStyles.xaml"/>
+	<StyleInclude Source="avares://Tengu.Delicious/Theme/TabControlStyles.xaml"/>
 </Styles>
